fix(input): aligns input border colours with designs

--- a/projects/canopy/src/styles/variables/_main.scss
+++ b/projects/canopy/src/styles/variables/_main.scss
@@ -26,8 +26,9 @@
   --outline-color: var(--color-dandelion-yellow);
   --outline-width: 0.1875rem;
 
-  --border-color: var(--color-charcoal);
-  --border-hover-color: var(--color-taupe-grey);
+  --border-color: var(--color-taupe-grey);
+  --border-hover-color: var(--color-battleship-grey);
+  --border-focus-color: var(--color-battleship-grey);
 
   --keyline-width: 0.1875rem;
   --checkmark-color: var(--color-super-blue);
